force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/Forrester_SHIR_CASE_CRDR_SHARE__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_CRDR_SHARE</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_CRDR_SHARE</externalName>
    <label>Forrester_SHIR_CASE_CRDR_SHARE</label>
    <pluralLabel>Forrester_SHIR_CASE_CRDR_SHARE</pluralLabel>
</CustomObject>