force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/BALANCE_DUE__c.field-meta.xml
<CustomField>
    <fullName>BALANCE_DUE__c</fullName>
    <description>BALANCE_DUE</description>
    <externalDeveloperName>BALANCE_DUE</externalDeveloperName>
    <label>Balance DEPT_RESIDUAL_RECID</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>