force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/BALANCE_DUE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>BALANCE_DUE_FLAG__c</fullName>
    <description>BALANCE_DUE_FLAG</description>
    <externalDeveloperName>BALANCE_DUE_FLAG</externalDeveloperName>
    <label>Balance Due Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>