force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/CASE_CRDR_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_CRDR_RECID__c</fullName>
    <description>CASE_CRDR_RECID</description>
    <externalDeveloperName>CASE_CRDR_RECID</externalDeveloperName>
    <label>Case CRDR</label>
    <length>24</length>
    <referenceTo>Forrester_SHIR_CRDR_VIEW__x</referenceTo>
    <relationshipLabel>Forrester_SHIR_CASE_CRDR_SHARE</relationshipLabel>
    <relationshipName>Forrester_SHIR_CASE_CRDR_SHARE</relationshipName>
    <type>ExternalLookup</type>
</CustomField>