force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/CASE_CRDR_SHARE_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_CRDR_SHARE_RECID__c</fullName>
    <description>CASE_CRDR_SHARE_RECID</description>
    <externalDeveloperName>CASE_CRDR_SHARE_RECID</externalDeveloperName>
    <label>Case CRDR Share Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>