force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/CHECK_DETAIL_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>CHECK_DETAIL_AMOUNT__c</fullName>
    <description>CHECK_DETAIL_AMOUNT</description>
    <externalDeveloperName>CHECK_DETAIL_AMOUNT</externalDeveloperName>
    <label>Check Detail Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>