force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/CURRENT_SHARE_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>CURRENT_SHARE_AMOUNT__c</fullName>
    <description>CURRENT_SHARE_AMOUNT</description>
    <externalDeveloperName>CURRENT_SHARE_AMOUNT</externalDeveloperName>
    <label>Current Share</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>