force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/DEPT_RESIDUAL_RECID__c.field-meta.xml
<CustomField>
    <fullName>DEPT_RESIDUAL_RECID__c</fullName>
    <description>DEPT_RESIDUAL_RECID</description>
    <externalDeveloperName>DEPT_RESIDUAL_RECID</externalDeveloperName>
    <label>Dept. Residual Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>