force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/DISBURSEMENT_NUM__c.field-meta.xml
<CustomField>
    <fullName>DISBURSEMENT_NUM__c</fullName>
    <description>DISBURSEMENT_NUM</description>
    <externalDeveloperName>DISBURSEMENT_NUM</externalDeveloperName>
    <label>Disbursement Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>