force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/EARLY_SHARE_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>EARLY_SHARE_AMOUNT__c</fullName>
    <description>EARLY_SHARE_AMOUNT</description>
    <externalDeveloperName>EARLY_SHARE_AMOUNT</externalDeveloperName>
    <label>Early Share</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>