force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/HISTORICAL_CHECK_DATE__c.field-meta.xml
<CustomField>
    <fullName>HISTORICAL_CHECK_DATE__c</fullName>
    <description>HISTORICAL_CHECK_DATE</description>
    <externalDeveloperName>HISTORICAL_CHECK_DATE</externalDeveloperName>
    <label>Historical Check Date</label>
    <type>DateTime</type>
</CustomField>