force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/HISTORICAL_CHECK_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>HISTORICAL_CHECK_NUMBER__c</fullName>
    <description>HISTORICAL_CHECK_NUMBER</description>
    <externalDeveloperName>HISTORICAL_CHECK_NUMBER</externalDeveloperName>
    <label>Historical Check Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>