force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/HOLD_REASON__c.field-meta.xml
<CustomField>
    <fullName>HOLD_REASON__c</fullName>
    <description>HOLD_REASON</description>
    <externalDeveloperName>HOLD_REASON</externalDeveloperName>
    <label>Hold Reason</label>
    <length>24</length>
    <type>Text</type>
</CustomField>