force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/HOLD_REASON_TEXT__c.field-meta.xml
<CustomField>
    <fullName>HOLD_REASON_TEXT__c</fullName>
    <description>HOLD_REASON_TEXT</description>
    <externalDeveloperName>HOLD_REASON_TEXT</externalDeveloperName>
    <label>Hold Reason Text</label>
    <length>120</length>
    <type>Text</type>
</CustomField>