force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/INVENTOR_DEDUCT_PCT__c.field-meta.xml
<CustomField>
    <fullName>INVENTOR_DEDUCT_PCT__c</fullName>
    <description>INVENTOR_DEDUCT_PCT</description>
    <externalDeveloperName>INVENTOR_DEDUCT_PCT</externalDeveloperName>
    <label>Inventor Deduct Pct</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>