force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/INVENTOR_RECID__c.field-meta.xml
<CustomField>
    <fullName>INVENTOR_RECID__c</fullName>
    <description>INVENTOR_RECID</description>
    <externalDeveloperName>INVENTOR_RECID</externalDeveloperName>
    <label>Inventor Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>