force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/MAX_DISTRIBUTION__c.field-meta.xml
<CustomField>
    <fullName>MAX_DISTRIBUTION__c</fullName>
    <description>MAX_DISTRIBUTION</description>
    <externalDeveloperName>MAX_DISTRIBUTION</externalDeveloperName>
    <label>Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>