force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/ON_HOLD_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ON_HOLD_FLAG__c</fullName>
    <description>ON_HOLD_FLAG</description>
    <externalDeveloperName>ON_HOLD_FLAG</externalDeveloperName>
    <label>On Hold Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>