force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/RECIPIENT_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>RECIPIENT_CATEGORY__c</fullName>
    <description>RECIPIENT_CATEGORY</description>
    <externalDeveloperName>RECIPIENT_CATEGORY</externalDeveloperName>
    <label>Recipient Category</label>
    <length>1</length>
    <type>Text</type>
</CustomField>