force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/RECIPIENT_CATEGORY_DESC__c.field-meta.xml
<CustomField>
    <fullName>RECIPIENT_CATEGORY_DESC__c</fullName>
    <description>RECIPIENT_CATEGORY_DESC</description>
    <externalDeveloperName>RECIPIENT_CATEGORY_DESC</externalDeveloperName>
    <label>Recipient Category Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>