force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/RECIPIENT_ID__c.field-meta.xml
<CustomField>
    <fullName>RECIPIENT_ID__c</fullName>
    <description>RECIPIENT_ID</description>
    <externalDeveloperName>RECIPIENT_ID</externalDeveloperName>
    <label>Recipient Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>