force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/RECIPIENT_NAME__c.field-meta.xml
<CustomField>
    <fullName>RECIPIENT_NAME__c</fullName>
    <description>RECIPIENT_NAME</description>
    <externalDeveloperName>RECIPIENT_NAME</externalDeveloperName>
    <label>Recipient Name</label>
    <length>144</length>
    <type>Text</type>
</CustomField>