force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/RECIPIENT_RECID__c.field-meta.xml
<CustomField>
    <fullName>RECIPIENT_RECID__c</fullName>
    <description>RECIPIENT_RECID</description>
    <externalDeveloperName>RECIPIENT_RECID</externalDeveloperName>
    <label>Recipient Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>