force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/SHARE_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>SHARE_COMMENT__c</fullName>
    <description>SHARE_COMMENT</description>
    <externalDeveloperName>SHARE_COMMENT</externalDeveloperName>
    <label>Comment</label>
    <length>130</length>
    <type>Text</type>
</CustomField>