force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/SHARE_LEVEL__c.field-meta.xml
<CustomField>
    <fullName>SHARE_LEVEL__c</fullName>
    <description>SHARE_LEVEL</description>
    <externalDeveloperName>SHARE_LEVEL</externalDeveloperName>
    <label>Share Level</label>
    <length>1</length>
    <type>Text</type>
</CustomField>