force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_SHARE__x/fields/YTD_SHARE_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>YTD_SHARE_AMOUNT__c</fullName>
    <description>YTD_SHARE_AMOUNT</description>
    <externalDeveloperName>YTD_SHARE_AMOUNT</externalDeveloperName>
    <label>FY Share</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>